--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
+#bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 :root {
   --orange: #F9A828;
   --white: #ECECEB;
   --blue: #07617D;
   --dark-blue: #2E383F;
 
-  font-family: jungle;
+  margin: 0;
 }
 
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+main {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
 }
+
