--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ input:checked + .slider:before {
 }
 
 .project-content {
-    grid-column: 7 / span 5;
+    grid-column: 8 / span 4;
     text-align: right;
 }
 
@@ -386,7 +386,7 @@ input:checked + .slider:before {
 .project-tech li {
     padding: 10px 5px;
     font-size: x-small;
-    color: var(--middle-color);
+    color: var(--highlight-one);
     display:inline;
 }
 .project-links {
