--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ input:checked + .slider:before {
 }
 
 .proj {
+    padding-bottom: 150px;
     display: grid;
     gap: 10px;
     place-items: center;
@@ -346,7 +347,7 @@ input:checked + .slider:before {
 }
 
 .project-image{
-    grid-column: 3 / span 6;
+    grid-column: 2 / span 6;
 }
 
 .project-image img{
@@ -354,7 +355,7 @@ input:checked + .slider:before {
 }
 
 .project-content {
-    grid-column: 8 / span 4;
+    grid-column: 7 / span 5;
     text-align: right;
 }
 
@@ -391,28 +392,56 @@ input:checked + .slider:before {
 }
 .project-links {
     margin-top: 3%;
-    margin-right: 1%;
 }
 
 .project-links img {
     width: 4%;
+    margin-left: 2%;
 }
 
 img.youtube {
     width: 6%;
 }
 
+/* Aligned Right */
+.proj-other {
+    padding-bottom: 150px;
+    display: grid;
+    gap: 10px;
+    place-items: center;
+    place-content: center;
+    grid-template-columns: repeat(12, 1fr);
+}
 
+.proj-other > * {
+    grid-area: proj;
+}
 
+.proj-other .project-image{
+    grid-column: 6 / span 6;
+}
 
+.proj-other .project-tech {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    list-style: none;
+}
 
+.proj-other .project-links img {
+    width: 4%;
+    margin-left: 0;
+    margin-right: 2%;
+}
 
+.project-image img{
+    width: 100%;
+}
 
-
-
-
-
-
+.proj-other .project-content {
+    grid-column: 2 / span 5;
+    text-align: left;
+}
 
 /* MEDIA RESIZING */
 /* If less than 1400 */
@@ -452,6 +481,14 @@ img.youtube {
     }
 
     .project-content {
+        grid-column: 3 / span 8;
+    }
+
+    .proj-other .project-image {
+        display: none;
+    }
+
+    .proj-other .project-content {
         grid-column: 3 / span 8;
     }
 
