oops, forgot the year

--- a/style.css
+++ b/style.css
@@ -628,6 +628,10 @@ img.youtube {
 }
 
 @media only screen and (max-width: 800px) {
+    .contact {
+        width: 80%;
+    }
+
     .container {
         grid-template-columns: repeat(4, 100px);
         grid-template-rows: repeat(7, 120px);
