removed less relevant skills

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ input:checked + .slider:before {
     border-radius: 5px;
     color: var(--highlight-one);
     padding: 15px 32px;
+    margin-top: 40px;
     text-align: center;
     margin-left: 6px;
 }
@@ -252,16 +253,33 @@ input:checked + .slider:before {
     opacity: 0;
 }
 
+#more-button {
+    margin-left: 0;
+    width: 5%;
+    margin-bottom: 20px;
+}
+
+details > summary {
+    list-style: none;
+}
+details > summary::-webkit-details-marker {
+    display: none;
+}
+
+.extra {
+    color: var(--dark-color);
+    font-family: sf_normal;
+}
 /* SKILLS SECTION */
 
 .skills {
     margin-left: 7%;
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 .container {
     display: grid;
-    grid-template-columns: repeat(10, 100px);
+    grid-template-columns: repeat(8, 100px);
     grid-template-rows: repeat(3, 120px);
     gap: 5px;
 }
@@ -330,7 +348,7 @@ input:checked + .slider:before {
 
 /* PROJECTS SECTION */
 .projects {
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 .projects-list {
@@ -410,7 +428,17 @@ img.youtube {
     width: 6%;
 }
 
-/* Aligned Right */
+/* INVOLVEMENT */
+.involvement {
+    margin-left: 7%;
+    padding-bottom: 200px;
+}
+
+
+
+
+
+/* OTHER PROJECTS */
 .proj-other {
     padding-bottom: 150px;
     display: grid;
@@ -538,6 +566,8 @@ img.youtube {
     padding-bottom: 50px;
 }
 
+
+/* BUILT BY */
 .built {
     text-align: center;
 }
@@ -549,30 +579,16 @@ img.youtube {
 
 
 /* MEDIA RESIZING */
-/* If less than 1400 */
-
-@media only screen and (max-width: 1700px) {
-    .container {
-        grid-template-columns: repeat(9, 100px);
-        grid-template-rows: repeat(5, 120px);
-    }
-}
-
 @media only screen and (max-width: 1550px) {
     .container {
-        grid-template-columns: repeat(8, 100px);
-        grid-template-rows: repeat(5, 120px);
+        grid-template-columns: repeat(6, 100px);
+        grid-template-rows: repeat(4, 120px);
     }
 }
 
 @media only screen and (max-width: 1400px) {
     .description {
         width: 60%;
-    }
-
-    .container {
-        grid-template-columns: repeat(7, 100px);
-        grid-template-rows: repeat(5, 120px);
     }
 }
 
@@ -609,11 +625,6 @@ img.youtube {
     .proj-other .project-content {
         grid-column: 3 / span 8;
     }
-
-    .container {
-        grid-template-columns: repeat(6, 100px);
-        grid-template-rows: repeat(5, 120px);
-    }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -622,7 +633,7 @@ img.youtube {
     }
 
     .container {
-        grid-template-columns: repeat(5, 100px);
+        grid-template-columns: repeat(4, 100px);
         grid-template-rows: repeat(6, 120px);
     }
 }
@@ -632,16 +643,15 @@ img.youtube {
         width: 80%;
     }
 
-    .container {
-        grid-template-columns: repeat(4, 100px);
-        grid-template-rows: repeat(7, 120px);
+    .menu {
+        display: none;
     }
 }
 
 @media only screen and (max-width: 650px) {
     .container {
         grid-template-columns: repeat(3, 100px);
-        grid-template-rows: repeat(15, 120px);
+        grid-template-rows: repeat(8, 120px);
     }
 
     .proj-other .project-image {
@@ -671,7 +681,7 @@ img.youtube {
 
     .container {
         grid-template-columns: repeat(2, 100px);
-        grid-template-rows: repeat(15, 120px);
+        grid-template-rows: repeat(12, 120px);
     }
 
     .navbar img {
@@ -680,10 +690,6 @@ img.youtube {
 
     .title {
         margin-top: 60px;
-    }
-
-    .menu {
-        display: none;
     }
 
     .navbar a {
